tests/fixtures/invalid/index_match_with_bindings.gcl
// Error: index label patterns are bare tags; parenthesized constructor-style bindings are invalid here
index Maneuver = { Departure, Correction, Insertion };

node result: Dimensionless[Maneuver] = for m: Maneuver {
    match m {
        Maneuver.Departure(x) => 1.0,
        Maneuver.Correction => 2.0,
        Maneuver.Insertion => 3.0,
    }
};
